desktop/src/renderer/components/app-launcher/app-launcher.css
.app-launcher {
  @apply h-full text-center;
}

main {
  @apply h-full p-8 flex justify-start;
}

.launcherActions {
  @apply flex flex-col items-stretch justify-between;
  flex-basis: 30%;
  max-width: 16rem;
}

.primaryActions {
  stencila-button {
    @apply block mb-4;
  }
}

.secondaryActions {
  @apply text-left pt-4;

  & > *:not(:first-child) {
    @apply ml-2;
  }
}

.appVersion {
  @apply inline-block text-xs;
  color: var(--color-neutral-500);
}

.recentProjects {
  @apply border-0 border-l border-solid ml-8 pl-8 text-left;
  border-color: var(--color-neutral-100);
  flex-basis: 70%;

  h2 {
    color: var(--color-neutral-500);
  }

  ul {
    @apply list-none p-0 m-0;
  }

  li {
    @apply overflow-ellipsis overflow-hidden max-w-full -ml-2 mb-1;
  }
}

.recentProjectItem {
  &,
  &:link,
  &:visited {
    @apply flex flex-row items-center px-2 text-sm whitespace-nowrap rounded no-underline leading-none max-w-full overflow-hidden overflow-ellipsis cursor-pointer;
    color: var(--color-key);
    padding-bottom: 0.375rem;
    padding-top: 0.375rem;
  }

  &:hover {
    background: var(--color-neutral-50);
  }

  .meta {
    @apply align-middle;
    color: var(--color-key);

    & > * {
      @apply align-middle;
    }
  }

  stencila-icon {
    @apply pr-2 flex-initial;
  }

  .name {
    @apply text-sm leading-none truncate inline-block m-0;
  }

  .path {
    @apply text-xs leading-none truncate font-normal m-0 mt-px;
    color: var(--color-neutral-600);
  }
}

.logo {
  @apply h-8 mb-4 text-left;

  img {
    @apply h-full w-auto;
  }
}

h2 {
  @apply mt-0 mb-1 text-sm;
  color: var(--color-neutral-600);
}

